Item8891: more menu initialisation into the code, allowing the possibility of more than one menu in a topic
git-svn-id: http://svn.foswiki.org/trunk/JQuerymbComponentsPlugin@7323 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/pub/System/JQuerymbMenu/menu_red.css
+++ b/pub/System/JQuerymbMenu/menu_red.css
@@ -154,3 +154,7 @@
 .menuContainer :visited:hover {
 	background-color:transparent;
 }
+/* get the float-right menu element lined back up. */
+.rootVoices a.rootVoice.foswikiRight {
+	margin:-6px;
+}
